fix code block scroll performance and margin issue fix copy btn showing tick instead of 'Copied' add code soft-wrap feature

--- a/src/scss/_post.scss
+++ b/src/scss/_post.scss
@@ -297,7 +297,7 @@
 
   pre {
     overflow-x: auto;
-    margin: 1.5rem 0 3rem;
+    margin: 2rem 0 3rem;
     padding: 1rem 2rem;
     max-width: 100%;
     color: var(--code-text-color);
@@ -1273,7 +1273,7 @@ figure.kg-code-card {
     }
 
     figcaption {
-      margin-bottom: 0.4em;
+      margin-bottom: 2rem;
     }
 
     .kg-bookmark-container {
